      our failures on Windows.
    
    - Don't hard depend on Test::Expect. It depends IO::Tty which does
      not work under any version of Windows, except under Cygwin (it
      calls fcntl(*fd, F_DUPFD, 3)).

    - Remove Test::Synopsis dependency. It depends on
      Filter::Util::Call which had some failures. Now only used if
      it's installed on the system already.

0.41 2010-04-23 00:24:24

    - Don't (optionally) use Sys::Prctl on Perl 5.13.0 and above. It
      was made redundant in perl core commit 7636ea95c5 by yours
      truly.

    - A script to benchmark Hailo on different locally installed
      perls.

    - Correct test count for TEST_EXHAUSTIVE.

    - Update HALBot on the Web link to http://bifurcat.es

0.40 2010-04-13 15:10:23

    - Add --reply-random to the hailo command-line interface. Allows
      command-line babbling at random.

    - Improved formatting for --train on the command line. Now outputs
      how many lines/s were trained, e.g. "Trained from 11587 lines in
      36.97 seconds; 313.40/"

    - Fixed a bug on Mac OS X and probably some other
      systems. Previously the SQLite code would assume that a file
      that was `-s $file' was an empty database.

      On Mac OS X these files weren't 0 byte but 1 byte files. Route
      around this entire issue by creating a new API (->initialized)
      that checks if the schema has really been created by doing a
      query on the info table.

    - Solved bug in the t/storage/DBD-SQLite-memory/babble.t test. The
      test was skipped due to intermittent failures. Failures were due
      to a programming error in the tests.

    - DBD-SQLite-file-exhaustive-all.t is now run on
      TEST_EXHAUSTIVE_ALL=1. Previously this test was unreachable.

    - Add example utility to spew random names in random-names.

0.39 2010-04-09 13:21:22

    - Set the homepage field in META.yml to http://hailo.org

    - Add TODO tests for the Words tokenizer. There are some