@@ -29,11 +29,9 @@ File::Spec::Functions     = 0
 
 ; Mouse
 Mouse                     = 0.50
-MouseX::Types             = 0.05
 MouseX::Getopt            = 0.2601
 ; Moose
 Moose                     = 0.94
-MooseX::Types             = 0.21
 MooseX::StrictConstructor = 0.08
 MooseX::Getopt            = 0.26
 
