@@ -3,7 +3,6 @@ package Hailo::Command;
 use 5.010;
 use Any::Moose;
 use Any::Moose 'X::Getopt';
-use Any::Moose 'X::Types::'.any_moose() => [qw/Int Str Bool HashRef/];
 BEGIN {
     return unless Any::Moose::moose_is_preferred();
     require MooseX::StrictConstructor;
@@ -21,7 +20,7 @@ has help => (
     traits        => [ qw/ Getopt / ],
     cmd_aliases   => 'h',
     cmd_flag      => 'help',
-    isa           => Bool,
+    isa           => 'Bool',
     is            => 'ro',
     default       => 0,
     documentation => "You're soaking it in",
@@ -32,7 +31,7 @@ has _go_version => (
     cmd_aliases   => 'v',
     cmd_flag      => 'version',
     documentation => 'Print version and exit',
-    isa           => Bool,
+    isa           => 'Bool',
     is            => 'ro',
 );
 
@@ -40,7 +39,7 @@ has _go_examples => (
     traits        => [ qw/ Getopt / ],
     cmd_flag      => 'examples',
     documentation => 'Print examples along with the help message',
-    isa           => Bool,
+    isa           => 'Bool',
     is            => 'ro',
 );
 
@@ -49,7 +48,7 @@ has _go_progress => (
     cmd_aliases   => 'p',
     cmd_flag      => 'progress',
     documentation => 'Display progress during the import',
-    isa           => Bool,
+    isa           => 'Bool',
     is            => 'ro',
     default       => sub {
         my ($self) = @_;
@@ -62,7 +61,7 @@ has _go_learn => (
     cmd_aliases   => "l",
     cmd_flag      => "learn",
     documentation => "Learn from STRING",
-    isa           => Str,
+    isa           => 'Str',
     is            => "ro",
 );
 
@@ -71,7 +70,7 @@ has _go_learn_reply => (
     cmd_aliases   => "L",
     cmd_flag      => "learn-reply",
     documentation => "Learn from STRING and reply to it",
-    isa           => Str,
+    isa           => 'Str',
     is            => "ro",
 );
 
@@ -80,7 +79,7 @@ has _go_train => (
     cmd_aliases   => "t",
     cmd_flag      => "train",
     documentation => "Learn from all the lines in FILE, use - for STDIN",
-    isa           => Str,
+    isa           => 'Str',
     is            => "ro",
 );
 
@@ -89,7 +88,7 @@ has _go_reply => (
     cmd_aliases   => "r",
     cmd_flag      => "reply",
     documentation => "Reply to STRING",
-    isa           => Str,
+    isa           => 'Str',
     is            => "ro",
 );
 
@@ -98,7 +97,7 @@ has _go_random_reply => (
     cmd_aliases   => "R",
     cmd_flag      => "random-reply",
     documentation => "Like --reply but takes no STRING; Babble at random",
-    isa           => Bool,
+    isa           => 'Bool',
     is            => "ro",
 );
 
@@ -107,7 +106,7 @@ has _go_stats => (
     cmd_aliases   => "s",
     cmd_flag      => "stats",
     documentation => "Print statistics about the brain",
-    isa           => Bool,
+    isa           => 'Bool',
     is            => "ro",
 );
 
@@ -118,7 +117,7 @@ has _go_autosave => (
     cmd_aliases   => 'a',
     cmd_flag      => 'autosave',
     documentation => 'Save the brain on exit (on by default)',
-    isa           => Bool,
+    isa           => 'Bool',
     is            => 'rw',
     trigger       => sub {
         my ($self, $bool) = @_;
@@ -131,7 +130,7 @@ has _go_order => (
     cmd_aliases   => "o",
     cmd_flag      => "order",
     documentation => "Markov order; How deep the rabbit hole goes",
-    isa           => Int,
+    isa           => 'Int',
     is            => "rw",
     trigger       => sub {
         my ($self, $order) = @_;
@@ -144,7 +143,7 @@ has _go_brain => (
     cmd_aliases   => "b",
     cmd_flag      => "brain",
     documentation => "Load/save brain to/from FILE",
-    isa           => Str,
+    isa           => 'Str',
     is            => "ro",
     trigger       => sub {
         my ($self, $brain) = @_;
@@ -157,7 +156,7 @@ has _go_engine_class => (
     traits        => [ qw/ Getopt / ],
     cmd_aliases   => "E",
     cmd_flag      => "engine",
-    isa           => Str,
+    isa           => 'Str',
     is            => "rw",
     documentation => "Use engine CLASS",
     trigger       => sub {
@@ -170,7 +169,7 @@ has _go_storage_class => (
     traits        => [ qw/ Getopt / ],
     cmd_aliases   => "S",
     cmd_flag      => "storage",
-    isa           => Str,
+    isa           => 'Str',
     is            => "rw",
     documentation => "Use storage CLASS",
     trigger       => sub {
@@ -183,7 +182,7 @@ has _go_tokenizer_class => (
     traits        => [ qw/ Getopt / ],
     cmd_aliases   => "T",
     cmd_flag      => "tokenizer",
-    isa           => Str,
+    isa           => 'Str',
     is            => "rw",
     documentation => "Use tokenizer CLASS",
     trigger       => sub {
@@ -196,7 +195,7 @@ has _go_ui_class => (
     traits        => [ qw/ Getopt / ],
     cmd_aliases   => "u",
     cmd_flag      => "ui",
-    isa           => Str,
+    isa           => 'Str',
     is            => "rw",
     documentation => "Use UI CLASS",
     trigger       => sub {
