@@ -2,7 +2,6 @@ package Hailo::Role::Engine;
 
 use 5.010;
 use Any::Moose '::Role';
-use Any::Moose 'X::Types::'.any_moose() => [qw< Int >];
 use namespace::clean -except => 'meta';
 
 has storage => (
@@ -13,7 +12,7 @@ has storage => (
 
 has order => (
     required      => 1,
-    isa           => Int,
+    isa           => 'Int',
     is            => 'rw',
     documentation => "Our copy of the current markov order",
 );
