@@ -2,16 +2,15 @@ package Hailo::Role::Storage;
 
 use 5.010;
 use Any::Moose '::Role';
-use Any::Moose 'X::Types::'.any_moose() => [qw/Str Int/];
 use namespace::clean -except => 'meta';
 
 has brain => (
-    isa => Str,
+    isa => 'Str',
     is  => 'rw',
 );
 
 has order => (
-    isa => Int,
+    isa => 'Int',
     is  => 'rw',
 );
 
